--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "firebase": "^10.3.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-moment": "^1.1.3",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
